# mads__decode_dementia

./: README.md  environment.yaml  pyproject.toml
data/interim/: df_filtered.csv  donor_information_cleaned.csv  donor_information_cleaned.parquet  features_merged.csv  features_merged.parquet  group_weights_cleaned.csv  group_weights_cleaned.parquet  papq_wide_cleaned.csv  papq_wide_cleaned.parquet
notebooks/: 01.01_clean_donorinfo.ipynb  01.02_clean_group_weights.ipynb  01.03_clean_papq.ipynb  02.01_merge_cleaned_datasets.ipynb  03.01_causal_inference-balance_check.ipynb  03.02_causal_inference-modelling.ipynb  03.02_causal_inference-modelling.py  04.01_protein_analysis_and_clustering.ipynb  _sync_AB.sh
reports/html/: 2023-12-08_01.01_clean_donorinfo.html  2023-12-08_01.01_clean_donorinfo_no_code.html  2023-12-08_01.02_clean_group_weights.html  2023-12-08_01.03_clean_papq.html  2023-12-08_01.03_clean_papq_no_code.html  2023-12-08_02.01_merge_cleaned_datasets.html  2023-12-08_03.01_causal_inference-balance_check.html  2023-12-08_03.01_causal_inference-balance_check_no_code.html  2023-12-08_03.02_causal_inference-modelling.html  2023-12-08_03.02_causal_inference-modelling_no_code.html  2023-12-08_04.01_protein_analysis_and_clustering.html  2023-12-08_04.01_protein_analysis_and_clustering_no_code.html  2023-12-09_03.01_causal_inference-balance_check.html  2023-12-09_03.01_causal_inference-balance_check_no_code.html  2023-12-09_03.02_causal_inference-modelling.html  2023-12-09_03.02_causal_inference-modelling_no_code.html  2023-12-11_01.01_clean_donorinfo.html  (+2 more)
