[tool.poetry]
name = "dementia"
version = "1.0.0"
description = ""
authors = ["Andre Buser"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.9.16"
altair = "4.2.2"
black = "23.10.0"
flake8 = "6.1.0"
icecream = "2.1.3"
jupyterlab = "4.0.7"
jupytext = "1.15.2"
loguru = "0.7.2"
matplotlib = "3.8.0"
missingno = "0.5.2"
numpy = "1.26.1"
pandas = "2.1.1"
pip = "23.3.1"
scikit-learn = "1.3.2"
scipy = "1.11.3"
seaborn = "0.13.0"
statsmodels = "0.14.0"
watermark = "2.4.3"
pyarrow = "14.0.1"

[tool.poetry.group.full]
optional = true

[tool.poetry.group.full.dependencies]
python-dotenv = "1.0.0"
streamlit = "1.27.2"


[tool.setuptools_scm]
version_scheme = "post-release"
